--- a/model/model-login/src/main/res/values/themes.xml
+++ b/model/model-login/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="login_Theme.BaseApplication" parent="Theme.MaterialComponents.DayNight">
+    <style name="login_Theme.BaseApplication" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_200</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
