--- a/model/model-splash/src/main/res/values/themes.xml
+++ b/model/model-splash/src/main/res/values/themes.xml
@@ -10,7 +10,25 @@
         <item name="colorSecondaryVariant">@color/splash_teal_700</item>
         <item name="colorOnSecondary">@color/splash_black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" >?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor" >@color/white</item>
         <!-- Customize your theme here. -->
+        <item name="android:navigationBarColor">@color/splash_white</item>
     </style>
+
+    <style name="SplashTheme.SplashTheme" parent="Theme.SplashScreen">
+        <!--背景色-->
+        <item name="windowSplashScreenBackground">@color/purple_500</item>
+        <!--设置icon图标-->
+        <item name="windowSplashScreenAnimatedIcon">@drawable/ic_svg_animation</item>
+        <!--设置底部图标-->
+        <item name="android:windowSplashScreenBrandingImage"></item>
+        <item name="windowSplashScreenAnimationDuration">@integer/icon_animator_duration</item>
+        <item name="postSplashScreenTheme">@style/Theme.AppTheme</item>
+    </style>
+    <style name="SplashTheme.BaseSplashTheme" parent="Theme.SplashScreen">
+        <!--适配低版本启动画面-->
+        <item name="android:windowBackground">@drawable/ic_launcher_background</item>
+    </style>
+
+
 </resources>
