--- a/model/model-splash/src/main/res/values/themes.xml
+++ b/model/model-splash/src/main/res/values/themes.xml
@@ -1,5 +1,5 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
+<resources>
+    <!--闪屏页日间模式的主题-->
     <style name="SplashTheme.BaseApplication" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/splash_purple_500</item>
@@ -9,26 +9,11 @@
         <item name="colorSecondary">@color/splash_teal_200</item>
         <item name="colorSecondaryVariant">@color/splash_teal_700</item>
         <item name="colorOnSecondary">@color/splash_black</item>
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor" >@color/white</item>
-        <!-- Customize your theme here. -->
+        <!--布局的背景色-->
+        <item name="android:windowBackground">@color/splash_white</item>
+        <!--状态栏颜色-->
+        <item name="android:statusBarColor" >@color/splash_white</item>
+        <!--导航栏颜色-->
         <item name="android:navigationBarColor">@color/splash_white</item>
     </style>
-
-    <style name="SplashTheme.SplashTheme" parent="Theme.SplashScreen">
-        <!--背景色-->
-        <item name="windowSplashScreenBackground">@color/purple_500</item>
-        <!--设置icon图标-->
-        <item name="windowSplashScreenAnimatedIcon">@drawable/ic_svg_animation</item>
-        <!--设置底部图标-->
-        <item name="android:windowSplashScreenBrandingImage"></item>
-        <item name="windowSplashScreenAnimationDuration">@integer/icon_animator_duration</item>
-        <item name="postSplashScreenTheme">@style/Theme.AppTheme</item>
-    </style>
-    <style name="SplashTheme.BaseSplashTheme" parent="Theme.SplashScreen">
-        <!--适配低版本启动画面-->
-        <item name="android:windowBackground">@drawable/ic_launcher_background</item>
-    </style>
-
-
 </resources>
