--- a/model/model-home/src/main/res/layout/home_activity_main.xml
+++ b/model/model-home/src/main/res/layout/home_activity_main.xml
@@ -18,8 +18,8 @@
         android:id="@+id/bottomBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
-        app:itemBackground="@color/white"
+        android:background="?android:attr/windowBackground"
+        app:itemBackground="?android:attr/windowBackground"
         app:labelVisibilityMode="labeled"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/viewPager"
