--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -11,8 +11,8 @@
         <item name="colorOnSecondary">@color/black</item>
         <item name="android:windowBackground">@color/white</item>
         <!--状态栏颜色-->
-        <item name="android:statusBarColor" >#00000000</item>
+        <item name="android:statusBarColor">@color/white</item>
         <!--导航栏颜色-->
-        <item name="android:navigationBarColor">#00000000</item>
+        <item name="android:navigationBarColor">@color/white</item>
     </style>
 </resources>
