替换开屏动画、移除log

--- a/model/model-splash/src/main/res/layout/splash_activity_main.xml
+++ b/model/model-splash/src/main/res/layout/splash_activity_main.xml
@@ -10,6 +10,10 @@
         android:id="@+id/animView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:lottie_fileName="anim/anim_splash.json" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
