--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,17 +2,17 @@
     <!--APP日间模式的主题-->
     <style name="APPTheme.BaseApplication" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_200</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/black</item>
+        <item name="colorPrimary">@color/app_purple_200</item>
+        <item name="colorPrimaryVariant">@color/app_purple_700</item>
+        <item name="colorOnPrimary">@color/app_black</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_200</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <item name="android:windowBackground">@color/white</item>
+        <item name="colorSecondary">@color/app_teal_200</item>
+        <item name="colorSecondaryVariant">@color/app_teal_200</item>
+        <item name="colorOnSecondary">@color/app_black</item>
+        <item name="android:windowBackground">@color/app_white</item>
         <!--状态栏颜色-->
-        <item name="android:statusBarColor">@color/white</item>
+        <item name="android:statusBarColor">@color/app_white</item>
         <!--导航栏颜色-->
-        <item name="android:navigationBarColor">@color/white</item>
+        <item name="android:navigationBarColor">@color/app_white</item>
     </style>
 </resources>
