--- a/model/model-airpods/src/main/res/layout/airpods_activity_main.xml
+++ b/model/model-airpods/src/main/res/layout/airpods_activity_main.xml
@@ -6,4 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".activity.AirpodsMainActivity">
 
+    <TextView
+        android:id="@+id/airpodsState"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
