--- a/model/model-home/src/main/res/xml/home_activity_main_scene.xml
+++ b/model/model-home/src/main/res/xml/home_activity_main_scene.xml
@@ -6,44 +6,18 @@
     <Transition
         motion:constraintSetEnd="@+id/end"
         motion:constraintSetStart="@id/start"
-        motion:duration="1000">
+        motion:duration="200">
         <KeyFrameSet>
 
 
         </KeyFrameSet>
+        <OnClick motion:targetId="@+id/button" />
     </Transition>
 
     <ConstraintSet android:id="@+id/start">
-        <Constraint
-            android:id="@+id/cardView_1"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <Constraint
-            android:id="@+id/cardView_2"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-
-        <Constraint
-            android:id="@+id/cardView_3"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:cardElevation="0dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-
+        <Constraint android:id="@+id/cardView_1" />
+        <Constraint android:id="@+id/cardView_2" />
+        <Constraint android:id="@+id/cardView_3" />
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
