--- a/model/model-home/src/main/res/layout/home_test.xml
+++ b/model/model-home/src/main/res/layout/home_test.xml
@@ -7,24 +7,23 @@
     android:background="#00bfff"
     app:layoutDescription="@xml/home_activity_main_scene">
 
-    <androidx.cardview.widget.CardView
-        android:background="@color/white"
-        android:id="@+id/constraintLayout"
+    <!--卡片1-->
+    <View
+        android:id="@+id/cardView_1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:background="#80FFFFFF" />
+    <!--卡片2-->
+    <View
+        android:id="@+id/cardView_2"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#90FFFFFF" />
 
-        <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/viewPager"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+    <View
+        android:id="@+id/cardView_3"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/white" />
 
-    </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.motion.widget.MotionLayout>
