--- a/model/model-home/src/main/res/layout/home_activity_main.xml
+++ b/model/model-home/src/main/res/layout/home_activity_main.xml
@@ -10,6 +10,7 @@
     tools:openDrawer="start">
 
     <androidx.constraintlayout.motion.widget.MotionLayout
+        android:id="@+id/motionLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layoutDescription="@xml/home_activity_main_scene">
@@ -64,16 +65,6 @@
                     app:menu="@menu/home_bottom_menu" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </LinearLayout>
-        <TextView
-            android:id="@+id/button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="40dp"
-            android:layout_marginTop="40dp"
-            android:background="#2196F3"
-            android:text="开始动画"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.motion.widget.MotionLayout>
 
     <LinearLayout
