--- a/model/model-home/src/main/res/xml/home_activity_main_scene.xml
+++ b/model/model-home/src/main/res/xml/home_activity_main_scene.xml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <MotionScene xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:motion="http://schemas.android.com/apk/res-auto">
 
     <Transition
         motion:constraintSetEnd="@+id/end"
         motion:constraintSetStart="@id/start"
-        motion:duration="500">
-        <OnClick motion:targetId="@+id/button" />
-    </Transition>
+        motion:duration="500" />
 
     <ConstraintSet android:id="@+id/start">
         <Constraint android:id="@+id/cardView_1" />
