--- a/model/model-home/src/main/res/layout/home_activity_main.xml
+++ b/model/model-home/src/main/res/layout/home_activity_main.xml
@@ -15,23 +15,26 @@
         android:layout_height="match_parent"
         app:layoutDescription="@xml/home_activity_main_scene">
         <!--卡片1-->
-        <View
+        <androidx.cardview.widget.CardView
             android:paddingTop="20dp"
             android:id="@+id/cardView_1"
+            app:cardElevation="0dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#80FFFFFF" />
+            app:cardBackgroundColor="#80FFFFFF" />
         <!--卡片2-->
-        <View
+        <androidx.cardview.widget.CardView
             android:paddingTop="20dp"
             android:id="@+id/cardView_2"
+            app:cardElevation="0dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#90FFFFFF" />
+            app:cardBackgroundColor="#90FFFFFF" />
         <!--首页-->
-        <LinearLayout
+        <androidx.cardview.widget.CardView
             android:paddingTop="20dp"
-            android:background="?android:attr/windowBackground"
+            app:cardElevation="0dp"
+            app:cardBackgroundColor="?android:attr/windowBackground"
             android:id="@+id/cardView_3"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -64,7 +67,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/viewPager"
                     app:menu="@menu/home_bottom_menu" />
             </androidx.constraintlayout.widget.ConstraintLayout>
-        </LinearLayout>
+        </androidx.cardview.widget.CardView>
     </androidx.constraintlayout.motion.widget.MotionLayout>
 
     <LinearLayout
