--- a/model/model-home/src/main/res/layout/home_test.xml
+++ b/model/model-home/src/main/res/layout/home_test.xml
@@ -9,22 +9,28 @@
     app:layoutDescription="@xml/home_activity_main_scene">
 
     <!--卡片1-->
-    <View
+    <androidx.cardview.widget.CardView
         android:id="@+id/cardView_1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#80FFFFFF" />
+        app:cardBackgroundColor="#80FFFFFF"
+        app:cardCornerRadius="4dp"
+        app:cardElevation="0dp" />
     <!--卡片2-->
-    <View
+    <androidx.cardview.widget.CardView
         android:id="@+id/cardView_2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#90FFFFFF" />
+        app:cardBackgroundColor="#90FFFFFF"
+        app:cardCornerRadius="4dp"
+        app:cardElevation="0dp" />
 
-    <View
+    <androidx.cardview.widget.CardView
         android:id="@+id/cardView_3"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white" />
+        app:cardBackgroundColor="@color/white"
+        app:cardCornerRadius="4dp"
+        app:cardElevation="0dp" />
 
 </androidx.constraintlayout.motion.widget.MotionLayout>
