--- a/model/model-home/src/main/res/layout/home_activity_main.xml
+++ b/model/model-home/src/main/res/layout/home_activity_main.xml
@@ -77,7 +77,8 @@
         android:layout_gravity="start"
         android:clickable="true"
         android:focusable="true"
-        android:gravity="center_horizontal">
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/menu_text"
@@ -89,5 +90,43 @@
             android:textSize="20sp"
             android:textStyle="italic"
             android:typeface="serif" />
+
+        <LinearLayout
+            android:layout_width="180dp"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:orientation="vertical">
+
+            <TextView
+                android:paddingStart="10dp"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
+                android:background="@drawable/home_draw_background"
+                android:padding="4dp"
+                android:text="修改头像"
+                android:textColor="@color/white" />
+
+            <TextView
+                android:paddingStart="10dp"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
+                android:background="@drawable/home_draw_background"
+                android:padding="4dp"
+                android:text="意见反馈"
+                android:textColor="@color/white" />
+
+            <TextView
+                android:paddingStart="10dp"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
+                android:background="@drawable/home_draw_background"
+                android:padding="4dp"
+                android:text="支持一下"
+                android:textColor="@color/white" />
+
+        </LinearLayout>
     </LinearLayout>
 </com.library.widget.drawer.DrawerLayout>
