--- a/model/model-splash/src/main/res/values/themes.xml
+++ b/model/model-splash/src/main/res/values/themes.xml
@@ -10,9 +10,10 @@
         <item name="colorSecondaryVariant">@color/splash_teal_700</item>
         <item name="colorOnSecondary">@color/splash_black</item>
         <!--布局的背景色-->
+        <!--        <item name="android:windowBackground">@drawable/splash_preview</item>-->
         <item name="android:windowBackground">@color/splash_white</item>
         <!--状态栏颜色-->
-        <item name="android:statusBarColor" >@color/splash_white</item>
+        <item name="android:statusBarColor">@color/splash_white</item>
         <!--导航栏颜色-->
         <item name="android:navigationBarColor">@color/splash_white</item>
     </style>
