--- a/model/model-kotlin/src/main/res/layout/mykotlin_activity_net_normal.xml
+++ b/model/model-kotlin/src/main/res/layout/mykotlin_activity_net_normal.xml
@@ -9,10 +9,10 @@
     tools:context=".activity.NetNormalActivity">
 
     <Button
-        android:id="@+id/btn_normal_use_rxjava3"
+        android:id="@+id/btn_normal_use_download"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
-        android:text="使用RxJava3"
+        android:text="flow下载"
         android:textSize="12sp"
         tools:ignore="HardcodedText" />
 
