--- a/model/model-airpods/src/main/res/values-night/themes.xml
+++ b/model/model-airpods/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.MyApplication" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="AirpodsTheme.MyApplication" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/airpods_purple_200</item>
         <item name="colorPrimaryVariant">@color/airpods_purple_700</item>
