--- a/model/model-login/src/main/res/layout/login_activity_login.xml
+++ b/model/model-login/src/main/res/layout/login_activity_login.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -14,4 +14,11 @@
         android:layout_height="wrap_content"
         android:text="开始登录" />
 
-</LinearLayout>
+    <Button
+        android:id="@+id/getUser"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/loginBtn"
+        android:text="获取用户" />
+
+</androidx.appcompat.widget.LinearLayoutCompat>
